<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/thinGrey">

    <LinearLayout
        android:id="@+id/llParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin15"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/llTop_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/thinGrey"
            android:orientation="horizontal"
            android:visibility="visible">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:iconifiedByDefault="false"
                android:background="@drawable/searchview_bg"
                android:hint="@string/search_task"
                android:queryHint="@string/search_task" />

            <!-- Filter Button -->
            <ImageView
                android:id="@+id/ivFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:background="@color/white"
                android:contentDescription="@string/filter"
                android:padding="8dp"
                android:src="@drawable/icon_filter" />

            <!-- Toggle List/Grid Button -->
            <ImageView
                android:id="@+id/ivToggleView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:background="@color/white"
                android:contentDescription="@string/list"
                android:padding="8dp"
                android:src="@drawable/icon_grid" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin15"
            android:background="@color/thinGrey"
            android:orientation="vertical"
            android:visibility="visible">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTasks"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvNoTaskAdded"
            style="@style/textPrimary"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/margin15"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/no_task_added"
            android:visibility="gone" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/faAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin25"
        android:layout_marginBottom="@dimen/margin25"
        android:backgroundTint="@color/primary"
        android:contentDescription="@string/add_task"
        android:src="@drawable/add_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>